--- a/final_project/index.html
+++ b/final_project/index.html
@@ -937,7 +937,7 @@ MyuEA8fMzArhwDEzs0L8f4oB3EOngterAAAAAElFTkSuQmCC
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>On the boxplot, the data points are overlaid on the boxes, to have a better understanding of the distribution.</p>
-<p>The plots for the remaining variables are on the Plots notebook: <a href="Plots.ipynb">Plots Notebook</a> or <a href="final_project/Plots.html">Plots html</a>.</p>
+<p>The plots for the remaining variables are on the Plots notebook: <a href="Plots.ipynb">Plots Notebook</a> or <a href="Plots.html">Plots html</a>.</p>
 <p>The removal of outliers it's always a delicate topic. By observing the plots we can see that for most variables there is usually a skew distribution with some points at extreme values. We may be tempted to remove these values. However, on most cases they seem to correspond to real values and not a error in the data. The extreme values are usually corresponding to people with higher positions in the company which would have higher compensation.</p>
 <p>We want our classification model to be able to identify people of interest no matter in which level of the hierarchy inside the company they were. Therefore, these extreme values which seem to be just people with higher than average compensation or higher than average email activity are left in the dataset.</p>
 <p>When exploring the dataset for outliers, we found an observation with the name "THE TRAVEL AGENCY IN THE PARK", which does not correspond to an individual. This observation was therefore removed from the dataset.</p>
